; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_update_runtime_log.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_update_runtime_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@runtime_content_path = common dso_local global i32 0, align 4
@runtime_core_path = common dso_local global i32 0, align 4
@libretro_core_runtime_usec = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @update_runtime_log to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_runtime_log(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @runtime_content_path, align 4
  %5 = load i32, i32* @runtime_core_path, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32* @runtime_log_init(i32 %4, i32 %5, i32 %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %21

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* @libretro_core_runtime_usec, align 4
  %14 = call i32 @runtime_log_add_runtime_usec(i32* %12, i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @runtime_log_set_last_played_now(i32* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @runtime_log_save(i32* %17)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @free(i32* %19)
  br label %21

21:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32* @runtime_log_init(i32, i32, i32) #1

declare dso_local i32 @runtime_log_add_runtime_usec(i32*, i32) #1

declare dso_local i32 @runtime_log_set_last_played_now(i32*) #1

declare dso_local i32 @runtime_log_save(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
